--- a/locales/fr.schema.json
+++ b/locales/fr.schema.json
@@ -10,6 +10,13 @@
           "label": "Arrière plan du bouton NEUTRE",
           "info": "Utilisé sur les pages sans context (contact, etc...)."
         },
+        "colors_text_neutral_button": {
+          "label": "Texte du bouton NEUTRE",
+          "info": "Utilisé sur les pages sans context (contact, etc...)."
+        },
+        "colors_text_default": {
+          "label": "Textes par défaut (menus, titres de page, filtres...) "
+        },
         "colors_solid_button_labels": {
           "label": "Texte de bouton plein",
           "info": "Utilisé comme couleur de premier plan sur les couleurs d'accentuation."
@@ -354,6 +361,18 @@
       },
       "heading_size": {
         "label": "Taille du titre",
+        "options__1": {
+          "label": "Petit"
+        },
+        "options__2": {
+          "label": "Moyen"
+        },
+        "options__3": {
+          "label": "Grand"
+        }
+      },
+      "subheading_size": {
+        "label": "Taille du sous-titre",
         "options__1": {
           "label": "Petit"
         },
