--- a/locales/fr.json
+++ b/locales/fr.json
@@ -236,7 +236,7 @@
       "remove_title": "Supprimer {{ title }}",
       "subtotal": "Sous-total",
       "new_subtotal": "Nouveau sous-total",
-      "note": "Instructions spéciales concernant la commande",
+      "note": "Instructions spéciales concernant la commande :",
       "checkout": "Procéder au paiement",
       "empty": "Votre panier est vide",
       "cart_error": "Une erreur est survenue lors de l’actualisation de votre panier. Veuillez réessayer.",
