--- a/locales/fr.json
+++ b/locales/fr.json
@@ -209,7 +209,7 @@
         "email": "E-mail",
         "phone": "Numéro de téléphone",
         "comment": "Commentaire",
-        "message": "Message",
+        "message": "Message *",
         "send": "Envoyer",
         "post_success": "Merci de nous avoir contactés. Nous vous répondrons dès que possible.",
         "error_heading": "Veuillez ajuster les éléments suivants :",
